--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	},
 	"dependencies": {
 		"@auth/prisma-adapter": "^2.8.0",
+		"@prisma/client": "^6.6.0",
 		"@radix-ui/react-dropdown-menu": "^2.1.7",
 		"@radix-ui/react-slot": "^1.2.0",
 		"class-variance-authority": "^0.7.1",
