--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
 	"name": "script-hub",
 	"version": "0.1.0",
+	"type": "module",
+	"prisma": {
+		"seed": "ts-node prisma/seed.ts"
+	},
 	"private": true,
 	"scripts": {
 		"dev": "next dev --turbopack",
@@ -22,7 +26,8 @@
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"tailwind-merge": "^3.2.0",
-		"tailwindcss-animate": "^1.0.7"
+		"tailwindcss-animate": "^1.0.7",
+		"zod": "^3.24.2"
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "^3",
@@ -33,6 +38,7 @@
 		"eslint-config-next": "15.1.0",
 		"postcss": "^8",
 		"tailwindcss": "^3.4.1",
-		"typescript": "^5"
+		"ts-node": "^10.9.2",
+		"typescript": "^5.8.3"
 	}
 }
