--- a/package.json
+++ b/package.json
@@ -14,17 +14,23 @@
 	},
 	"dependencies": {
 		"@auth/prisma-adapter": "^2.8.0",
+		"@hookform/resolvers": "^5.0.1",
 		"@prisma/client": "^6.6.0",
+		"@radix-ui/react-avatar": "^1.1.4",
 		"@radix-ui/react-dropdown-menu": "^2.1.7",
+		"@radix-ui/react-label": "^2.1.3",
 		"@radix-ui/react-slot": "^1.2.0",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"lucide-react": "^0.487.0",
+		"moment": "^2.30.1",
+		"motion": "^12.6.5",
 		"next": "15.1.0",
 		"next-auth": "^4.24.11",
 		"next-themes": "^0.4.6",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
+		"react-hook-form": "^7.55.0",
 		"tailwind-merge": "^3.2.0",
 		"tailwindcss-animate": "^1.0.7",
 		"zod": "^3.24.2"
