--- a/package.json
+++ b/package.json
@@ -16,6 +16,24 @@
 		"@ai-sdk/openai": "^1.3.11",
 		"@ai-sdk/react": "^1.2.9",
 		"@auth/prisma-adapter": "^2.8.0",
+		"@codemirror/lang-angular": "^0.1.3",
+		"@codemirror/lang-cpp": "^6.0.2",
+		"@codemirror/lang-css": "^6.3.1",
+		"@codemirror/lang-go": "^6.0.1",
+		"@codemirror/lang-html": "^6.4.9",
+		"@codemirror/lang-java": "^6.0.1",
+		"@codemirror/lang-javascript": "^6.2.3",
+		"@codemirror/lang-json": "^6.0.1",
+		"@codemirror/lang-less": "^6.0.2",
+		"@codemirror/lang-markdown": "^6.3.2",
+		"@codemirror/lang-php": "^6.0.1",
+		"@codemirror/lang-python": "^6.1.7",
+		"@codemirror/lang-rust": "^6.0.1",
+		"@codemirror/lang-sass": "^6.0.2",
+		"@codemirror/lang-sql": "^6.8.0",
+		"@codemirror/lang-vue": "^0.1.3",
+		"@codemirror/lang-xml": "^6.1.0",
+		"@codemirror/lang-yaml": "^6.1.2",
 		"@hookform/resolvers": "^5.0.1",
 		"@prisma/client": "^6.6.0",
 		"@radix-ui/react-avatar": "^1.1.4",
@@ -30,6 +48,8 @@
 		"@tiptap/pm": "^2.11.7",
 		"@tiptap/react": "^2.11.7",
 		"@tiptap/starter-kit": "^2.11.7",
+		"@uiw/codemirror-theme-github": "^4.23.10",
+		"@uiw/react-codemirror": "^4.23.10",
 		"ai": "^4.3.6",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
