--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"react-hook-form": "^7.55.0",
+		"sanitize-html": "^2.15.0",
 		"sonner": "^2.0.3",
 		"tailwind-merge": "^3.2.0",
 		"tailwindcss-animate": "^1.0.7",
@@ -76,6 +77,7 @@
 		"@types/node": "^20",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
+		"@types/sanitize-html": "^2.15.0",
 		"eslint": "^9",
 		"eslint-config-next": "15.1.0",
 		"postcss": "^8",
