--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"cmdk": "^1.1.1",
+		"date-fns": "^4.1.0",
 		"lowlight": "^3.3.0",
 		"lucide-react": "^0.487.0",
 		"moment": "^2.30.1",
@@ -65,7 +66,7 @@
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"react-hook-form": "^7.55.0",
-		"sanitize-html": "^2.15.0",
+		"sanitize-html": "^2.16.0",
 		"sonner": "^2.0.3",
 		"tailwind-merge": "^3.2.0",
 		"tailwindcss-animate": "^1.0.7",
