--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"@codemirror/lang-xml": "^6.1.0",
 		"@codemirror/lang-yaml": "^6.1.2",
 		"@hookform/resolvers": "^5.0.1",
+		"@lezer/highlight": "^1.2.1",
 		"@prisma/client": "^6.6.0",
 		"@radix-ui/react-avatar": "^1.1.4",
 		"@radix-ui/react-dialog": "^1.1.7",
@@ -54,7 +55,6 @@
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"cmdk": "^1.1.1",
-		"date-fns": "^4.1.0",
 		"lowlight": "^3.3.0",
 		"lucide-react": "^0.487.0",
 		"moment": "^2.30.1",
