--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 		"@radix-ui/react-select": "^2.1.7",
 		"@radix-ui/react-separator": "^1.1.3",
 		"@radix-ui/react-slot": "^1.2.0",
+		"@radix-ui/react-switch": "^1.2.4",
 		"@radix-ui/react-tabs": "^1.1.9",
 		"@tiptap/extension-mention": "^2.11.7",
 		"@tiptap/pm": "^2.11.7",
