--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
 		"lowlight": "^3.3.0",
 		"lucide-react": "^0.487.0",
 		"motion": "^12.6.5",
+		"nanoid": "^5.1.5",
 		"next": "15.1.0",
 		"next-auth": "^4.24.11",
 		"next-themes": "^0.4.6",
